# CodexPlusPlus

./: Cargo.toml
.github/workflows/: pr-build.yml  release-assets.yml  release-push.yml
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  model-windows.test.ts  model-windows.ts  presets.ts  styles.css
apps/codex-plus-manager/src-tauri/: tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: lib.rs
apps/codex-plus-manager/src-tauri/tests/: windows_subsystem.rs
apps/codex-plus-manager/src/components/: ProviderPresetSelector.tsx
assets/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: assets.rs  launcher.rs  lib.rs  plugin_marketplace.rs  relay_config.rs  settings.rs  watcher.rs  windows_integration.rs
crates/codex-plus-core/src/upstream_worktree/remote/: tests.rs
crates/codex-plus-core/tests/: cdp_bridge.rs  force_chinese_locale_settings.rs  launcher.rs  watcher.rs
scripts/installer/macos/: package-dmg.sh
